--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
-VERCEL_URL=http://localhost
-NEXT_PUBLIC_BASE_URL=http://localhost
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_SANITY_PROJECT_ID=dummy_project_id
 NEXT_PUBLIC_SANITY_DATASET=dummy_dataset
-NEXT_PUBLIC_SANITY_API_VERSION=2024-01-01
 SANITY_API_TOKEN=dummy_token
 SANITY_API_READ_TOKEN=dummy_read_token
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=dummy_publishable_key
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dummy_key
 CLERK_SECRET_KEY=dummy_clerk_secret_key
 STRIPE_SECRET_KEY=dummy_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=dummy_stripe_webhook_secret
+STRIPE_WEBHOOK_SECRET=dummy_webhook_secret
